Update layout for mobile and desktop; fix background positioning to align quotation graphic

--- a/style.css
+++ b/style.css
@@ -8,12 +8,14 @@ body {
     background-color: hsl(214, 17%, 92%);
     font-family: 'Barlow Semi Condensed', sans-serif;
     font-style: normal;
+    font-size: 13px;
 }
 
 .testimonials__grid {
+    margin: 4rem auto;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 1.5rem;
+    grid-template-columns: 1fr;
+    gap: 1rem;
     padding: 2rem;
     background-color: hsl(214, 17%, 92%);
 }
@@ -24,6 +26,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
 .testimonial-card__section-header {
@@ -38,9 +41,17 @@ body {
     border-radius:100%;
 }
 
+.testimonial-card__name {
+    font-weight: 600;
+    font-size: 0.9rem;
+}
+
 .testimonial-card--highlighted {
-    background-color: hsl(263, 55%, 52%);
-    color: hsl(0, 0%, 100%);
+  background: 
+    rgb(117, 65, 200) url('images/bg-pattern-quotation.svg') no-repeat;
+  background-position: 90% 7%;
+  color: hsl(0, 0%, 100%);
+
 }
 
 .testimonial-card--designo {
@@ -61,4 +72,40 @@ body {
 .testimonial-card--featured {
     background-color: hsl(0, 0%, 100%);
     color: hsl(224, 10%, 45%);
+}
+
+
+@media (min-width: 600px) {
+    .testimonials__grid {
+        width: 90%;
+        grid-template-columns: repeat(2, 1fr);
+
+    }
+}
+
+
+@media (min-width: 900px) {
+    .testimonials__grid {
+        margin-top: 8rem;
+        width: 90%;
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .testimonial-card--highlighted {
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+
+    .testimonial-card--welldeserved {
+        grid-column-start: 2;
+        grid-column-end: 4;
+       
+    }
+
+    .testimonial-card--featured {   
+        grid-column-start: 4;
+        grid-row-start: 1;
+        grid-row-end: 3;
+    }
+
 }
